Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- #2399: can't override most basic widget properties in indirects
- #2394: robustness in compounds if template or missing subwidgets
- #2392: indirect widgets, title_or_id and instance level properties
- #2329: included theme provided stylesheets in TinyMCE editor
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 