@@ -6,6 +6,7 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- #2403: export of CPS Vocabularies with unicode labels now works
 - #2399: can't override most basic widget properties in indirects
 - #2394: robustness in compounds if template or missing subwidgets
 - #2392: indirect widgets, title_or_id and instance level properties
